Added page for art

--- a/banner.html
+++ b/banner.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link h5 mb-0 py-3 py-lg-2" href="./fossils.html">Fossils</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link h5 mb-0 py-3 py-lg-2" href="./art.html">Art</a>
+      </li>
       <li class="nav-item h5 mb-0 dropdown">
         <a class="nav-link py-3 py-lg-2 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           External Tools
