--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
     <div class="container pt-5">
       <div class="py-5">
         <div class="h1 text-center">Welcome!</div>
-        <div class="pb-5 text-center">Please understand that this site is privately operated and might be a bit slow at times. Your patience is appreciated!</div>
-        <div class="h4 mb-0 text-center">Take me to...</div>
+        <div class="text-center">Please understand that this site is privately operated and might be a bit slow at times. Your patience is appreciated!</div>
       </div>
 
+      <div class="h4 mb-4 text-center">Take me to...</div>
       <div class="row">
-        <div class="col-12 col-sm-4 col-xl-2 offset-xl-3 mb-3">
+        <div class="col-12 col-sm-6 col-lg-3 mb-3">
           <a href="./critters.html" class="btn btn-primary btn-block btn-lg">Critters</a>
         </div>
-        <div class="col-12 col-sm-4 col-xl-2 mb-3">
+        <div class="col-12 col-sm-6 col-lg-3 mb-3">
           <a href="./villagers.html" class="btn btn-primary btn-block btn-lg">Villagers</a>
         </div>
-        <div class="col-12 col-sm-4 col-xl-2 mb-3">
+        <div class="col-12 col-sm-6 col-lg-3 mb-3">
           <a href="./fossils.html" class="btn btn-primary btn-block btn-lg">Fossils</a>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-3 mb-3">
+          <a href="./art.html" class="btn btn-primary btn-block btn-lg">Art</a>
         </div>
       </div>
       <hr />
