--- a/villagers.html
+++ b/villagers.html
@@ -52,6 +52,7 @@
                   <option ng-repeat="item in species" ng-value="'{{item}}'">{{item}}</option>
                 </select>
               </td>
+              <td></td>
             </tr>
           </tbody>
           <thead>
@@ -101,6 +102,7 @@
                   </span>
                 </a>
               </th>
+              <th>Birthday</th>
             </tr>
           </thead>
           <tbody>
@@ -120,6 +122,7 @@
               <td class="align-middle text-nowrap">{{ value.hobby }}</td>
               <td class="align-middle text-nowrap">{{ value.personality }}</td>
               <td class="align-middle text-nowrap">{{ value.species }}</td>
+              <td class="align-middle text-nowrap">{{ value['birthday-string'] }}</td>
             </tr>
             <tr ng-if="results.length > 0 && villagersloaded">
               <td colspan="5" class="py-3">{{ results.length }} Villager<span ng-if="results.length>1">s</span> found</td>
