--- a/critters.html
+++ b/critters.html
@@ -33,14 +33,14 @@
             <!-- <label class="btn btn-outline-primary" ng-class="{'active':crittertype=='all'}"> <input type="radio" name="crittertype" id="crittertype_all" ng-model="crittertype" ng-change="getCritterData(crittertype)" value="" /> All </label> -->
           </div>
         </div>
-        <div class="col-6 col-sm-6 col-lg-3 mb-4">
+        <!-- <div class="col-6 col-sm-6 col-lg-3 mb-4">
           <div class="font-weight-bold">Hemisphere</div>
           <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
             <label class="btn btn-outline-primary" ng-class="{'active':hemisphere=='northern'}"> <input type="radio" name="hemisphere" id="hemisphere_northern" ng-model="hemisphere" value="northern" /> Northern </label>
             <label class="btn btn-outline-primary" ng-class="{'active':hemisphere=='southern'}"> <input type="radio" name="hemisphere" id="hemisphere_southern" ng-model="hemisphere" value="southern" /> Southern </label>
           </div>
-        </div>
-        <div class="col-6 col-sm-6 col-lg-2 mb-4">
+        </div> -->
+        <!-- <div class="col-6 col-sm-6 col-lg-2 mb-4">
           <div class="font-weight-bold">Month Available</div>
           <select name="availmonth" id="availmonth" ng-model="availmonth" class="form-control">
             <option value="all">All months</option>
@@ -50,7 +50,7 @@
               >{{month.longname}}</option
             >
           </select>
-        </div>
+        </div> -->
         <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="font-weight-bold">
             Critter Lookup
@@ -113,7 +113,8 @@
             <tr ng-if="!crittersloaded">
               <td colspan="6" class="py-4 h5 mb-0 font-weight-light"><i class="fas fa-spinner fa-pulse"></i> Getting Critter data from Nookipedia...</td>
             </tr>
-            <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in results = (critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | bymonth:availmonth:hemisphere)">
+            <!-- <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in results = (critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext | bymonth:availmonth:hemisphere)"> -->
+            <tr ng-class="{'bg-secondary' : value.highlight, 'font-weight-bold' : value.highlight}" ng-if="crittersloaded" ng-repeat="(key, value) in results = (critters | toArray | orderBy:orderByField:reverseSort | search:lookuptype:searchtext)">
               <td class="align-middle">
                 <div class="d-flex justify-content-start align-items-center">
                   <div>
@@ -153,7 +154,7 @@
             </tr>
             <tr ng-if="results.length == 0 && crittersloaded">
               <td colspan="6" class="py-3">
-                <div class="text-danger h5 font-weight-bold"><i class="far fa-frown mr-1"></i> No Critters found</div>
+                <div class="font-weight-bold"><i class="far fa-frown mr-1"></i> No Critters found</div>
                 <div>There aren't any Critters that match your filters &amp; search.</div>
               </td>
             </tr>
