--- a/critters.html
+++ b/critters.html
@@ -118,7 +118,7 @@
               <td class="align-middle">
                 <div class="d-flex justify-content-start align-items-center">
                   <div>
-                    <img ng-src="{{value.render_url}}" style="height: 30px; width: 30px;" alt="" />
+                    <img ng-src="{{value.image_url}}" style="width: 30px; max-height: 30px;" alt="" />
                   </div>
                   <div class="ml-2 text-capitalize">{{ value.name }}</div>
                 </div>
